Fix Collapsed Sidebar Arrow Alignment

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -1496,8 +1496,13 @@
 			background-color: #000;
 			width: 25px;
 
-			div {
-				left: -6px;
+			> div {
+				> div {
+					> div {
+						position: relative;
+						left: -6px;
+					}
+				}
 			}
 		}
 
